extends Node2D
class_name BoardView

signal point_clicked(index: int)

@onready var input: BoardInput = $BoardInput
@onready var pieces: BoardPieces = $BoardPieces
@onready var animator: BoardAnimator = $BoardAnimator

@onready var highlights: BoardHighlights = $HighlightsLayer

func show_move_targets(targets: Array[int], player: int) -> void:
	var is_white: bool = (player == BoardState.Player.WHITE)
	highlights.show_targets(targets, is_white)

func clear_move_targets() -> void:
	highlights.clear()



func _ready() -> void:
	input.point_clicked.connect(func(i: int) -> void:
		emit_signal("point_clicked", i)
	)

func sync_from_state_full(state: BoardState) -> void:
	pieces.sync_from_state_full(state)

func animate_move_persistent(state: BoardState, move: Dictionary, player: int, done: Callable) -> void:
	input.set_enabled(false)

	var is_white: bool = (player == BoardState.Player.WHITE)
	var from_i: int = int(move["from"])
	var to_i: int = int(move["to"])
	var hit: bool = bool(move.get("hit", false))

	# Determine moving checker id (top of source stack)
	var moving_id: int = -1
	if from_i == -1:
		var bar: PackedInt32Array = state.bar_white if is_white else state.bar_black
		if bar.size() == 0:
			input.set_enabled(true)
			return
		moving_id = bar[bar.size() - 1]
	else:
		var src: PackedInt32Array = state.points[from_i]
		if src.size() == 0:
			input.set_enabled(true)
			return
		moving_id = src[src.size() - 1]

	var moving_node: Node2D = pieces.get_piece(moving_id)
	if moving_node == null:
		input.set_enabled(true)
		return

	# Hit animation (parallel)
	if hit and to_i >= 0 and to_i <= 23:
		var dst: PackedInt32Array = state.points[to_i]
		if dst.size() == 1:
			var hit_id: int = dst[0]
			var hit_node: Node2D = pieces.get_piece(hit_id)
			if hit_node != null:
				var opp_is_white: bool = (state.owner_of(hit_id) == BoardState.Player.WHITE)
				var opp_bar_size: int = (state.bar_white.size() if opp_is_white else state.bar_black.size())
				var bar_pos: Vector2 = pieces.bar_slot_global(opp_is_white, opp_bar_size)
				hit_node.z_index = 2000
				animator.fly_to(hit_node, bar_pos, 0.20, func() -> void:
					pass
				)

	# Landing position
	if to_i >= 0 and to_i <= 23:
		var dst_size: int = state.points[to_i].size()
		var landing_index: int = dst_size - (1 if hit else 0) # if hit blot, it leaves first
		landing_index = max(0, landing_index)

		var end_pos: Vector2 = pieces.point_slot_global(to_i, landing_index)
		var dir: Vector2 = pieces.point_stack_dir_global(to_i)

		moving_node.z_index = 2001
		animator.fly_to_with_bounce(
			moving_node, end_pos, dir,
			0.20, 10.0, 0.10,
			func() -> void:
				input.set_enabled(true)
				if done.is_valid():
					done.call()
		)
		return

	# Bear off
	if (is_white and to_i == 24) or ((not is_white) and to_i == -2):
		var off_size: int = (state.off_white.size() if is_white else state.off_black.size())
		var off_pos: Vector2 = pieces.off_slot_global(is_white, off_size)
		moving_node.z_index = 2001
		animator.fly_to(moving_node, off_pos, 0.20, func() -> void:
			input.set_enabled(true)
			if done.is_valid():
				done.call()
		)
		return

	input.set_enabled(true)
